currently it partially works

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "src/h"
     ],
     "files.associations": {
-        "efi.h": "c"
+        "efi.h": "c",
+        "efilib.h": "c"
     }
 }
