--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
     ],
     "files.associations": {
         "efi.h": "c",
-        "efilib.h": "c"
+        "efilib.h": "c",
+        "*.asm": "cpp"
     },
     "C_Cpp.default.compilerPath": "/home/oculometric/opt/cross/bin/i386-elf-gcc"
 }
