--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "files.associations": {
         "efi.h": "c",
         "efilib.h": "c",
-        "*.asm": "cpp"
+        "*.asm": "cpp",
+        "*.bin": "cpp"
     },
     "C_Cpp.default.compilerPath": "/home/oculometric/opt/cross/bin/i386-elf-gcc"
 }
