--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
     "C_Cpp.default.includePath": [
         "src/include",
+        "${workspaceFolder}/src/include",
         "src"
     ],
     "files.associations": {
         "efi.h": "c",
         "efilib.h": "c",
-        "*.asm": "cpp",
+        "*.asm": "asm",
         "*.bin": "cpp"
     },
     "C_Cpp.default.compilerPath": "/home/oculometric/opt/cross/bin/i386-elf-gcc"
