--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "efi.h": "c",
         "efilib.h": "c",
         "*.asm": "asm",
-        "*.bin": "cpp"
+        "*.bin": "cpp",
+        "*.o": "cpp"
     },
     "C_Cpp.default.compilerPath": "/home/oculometric/opt/cross/bin/i386-elf-gcc"
 }
